style: add flex-column-stretch to mixins and fix product wrapper in ProductsSection component

--- a/app/components/Sections/ProductSection/productSection.module.scss
+++ b/app/components/Sections/ProductSection/productSection.module.scss
@@ -29,7 +29,7 @@
   }
 
   &__products__product {
-    @include flex-column-center;
+    @include flex-column-stretch;
     gap: 25px;
     width: 100%;
     max-height: 310px;
@@ -50,6 +50,7 @@
   &__products__product__wrapper {
     @include flex-column;
     gap: 4px;
+    width: 100%;
     text-align: center;
 
     @include mediaquery(xl) {
